# CrewClaw

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  requirements.txt  requirements_dev.txt  windows_run.ps1
apps/clawloops-api/: Dockerfile  TESTING.md  pyproject.toml
apps/clawloops-api/app/: __init__.py  main.py
apps/clawloops-api/app/api/: __init__.py
apps/clawloops-api/app/core/: auth.py  authentik_groups.py  database.py  dependencies.py  errors.py  logging.py  password_policy.py  passwords.py  sessions.py  settings.py
apps/clawloops-api/app/domain/: __init__.py  credentials.py  invitations.py  models.py  runtime_ports.py  users.py
apps/clawloops-api/app/infra/: __init__.py  db.py  model_gateway_client.py  openrouter_client.py  runtime_manager_client.py
apps/clawloops-api/app/models/: invitation.py  model_catalog.py  session.py  user.py
apps/clawloops-api/app/repositories/: __init__.py  invitation_repository.py  model_repository.py  session_repository.py  usage_repository.py  user_repository.py
apps/clawloops-api/app/schemas/: __init__.py  (+10 more)
apps/clawloops-api/clawloops_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/clawloops-api/scripts/: README.md
apps/clawloops-api/tests/: __init__.py  conftest.py  test_contracts_runtime_binding.py  test_contracts_v08_baseline.py  test_contracts_v12_lightweight_auth.py  test_healthcheck.py  test_infra_runtime_routing.py
services/runtime-manager/: Dockerfile  pyproject.toml
services/runtime-manager/app/: main.py
(+206 files in other folders)
