[project]
name = "clawloops-backend"
version = "0.1.0"
description = "ClawLoops MVP control plane backend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<0.120.0",
  "uvicorn[standard]>=0.30.0,<0.35.0",
  "httpx>=0.27.0,<0.29.0",
  "pydantic>=2.6.0,<3.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

