[project]
name = "clawloops-runtime-manager"
version = "0.1.0"
description = "ClawLoops Runtime Manager service."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<0.120.0",
  "python-multipart>=0.0.9,<1.0.0",
  "uvicorn[standard]>=0.30.0,<0.35.0",
  "pydantic>=2.6.0,<3.0.0",
  "pydantic-settings>=2.7.0,<3.0.0",
  "docker>=7.1.0,<8.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
